wip for session 1

--- a/session1/motivating_example.ipynb
+++ b/session1/motivating_example.ipynb
@@ -7,14 +7,174 @@
    "source": [
     "# Motivating Example\n",
     "\n",
-    "Jupyter Notebooks are frequently used to import, transform and visualize data. For example, the code below imports\n",
-    "population estimates for US States. It subsets the dataframe to California and graphs the result."
+    "Jupyter Notebooks are frequently used to import, transform and visualize data. For example, here's a dataframe of US State Population Estimates since 2005."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7ae1a966",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total Population</th>\n",
+       "      <th>Median Household Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>4442558</td>\n",
+       "      <td>36879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>4599030</td>\n",
+       "      <td>38783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>4627851</td>\n",
+       "      <td>40554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4661900</td>\n",
+       "      <td>42666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4708708</td>\n",
+       "      <td>40489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>931</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>577737</td>\n",
+       "      <td>61584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>932</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>578759</td>\n",
+       "      <td>65003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>933</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>578803</td>\n",
+       "      <td>65204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>934</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>581381</td>\n",
+       "      <td>70042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>935</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>584057</td>\n",
+       "      <td>72415</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>936 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       State  Year  Total Population  Median Household Income\n",
+       "0    Alabama  2005           4442558                    36879\n",
+       "1    Alabama  2006           4599030                    38783\n",
+       "2    Alabama  2007           4627851                    40554\n",
+       "3    Alabama  2008           4661900                    42666\n",
+       "4    Alabama  2009           4708708                    40489\n",
+       "..       ...   ...               ...                      ...\n",
+       "931  Wyoming  2018            577737                    61584\n",
+       "932  Wyoming  2019            578759                    65003\n",
+       "933  Wyoming  2021            578803                    65204\n",
+       "934  Wyoming  2022            581381                    70042\n",
+       "935  Wyoming  2023            584057                    72415\n",
+       "\n",
+       "[936 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.io as pio\n",
+    "\n",
+    "# Allows plotly plots to render interactively locally, but as static images when viewed in github.\n",
+    "# Without this the plotly images simply do not render in github.\n",
+    "pio.renderers.default = \"vscode+png\"\n",
+    "\n",
+    "df = pd.read_csv(\"state_data.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ae041cf",
+   "metadata": {},
+   "source": [
+    "## Graphing just one state\n",
+    "\n",
+    "The code below subsets the dataframe to just California, and then graphs the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7dfdde87",
    "metadata": {},
    "outputs": [
     {
@@ -863,16 +1023,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "import plotly.io as pio\n",
-    "\n",
-    "# Allows plotly plots to render interactively locally, but as static images when viewed in github.\n",
-    "# Without this the plotly images simply do not render in github.\n",
-    "pio.renderers.default = \"vscode+png\"\n",
-    "\n",
-    "df = pd.read_csv(\"state_data.csv\")\n",
-    "\n",
     "state = \"California\"\n",
     "df_state = df[df[\"State\"] == state]\n",
     "px.line(df_state, x=\"Year\", y=\"Total Population\", title=f\"Total Population of {state}\")"
@@ -890,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c1212a17",
    "metadata": {},
    "outputs": [
@@ -1758,24 +1908,7 @@
     "\n",
     "One alternative is to build a website that lets users select a state. The site could render the population graph for just that state. This would allow users to see all the visualizations without being overwhelmed by too much information at once.\n",
     "\n",
-    "Streamlit makes it easy to create apps like this. In fact, the code for a Streamlit app often closely resembles the code used in the original notebook. Below is code to build the app described above. As you read through it, consider: which parts mirror the notebook code you've already seen, and which parts introduce something new?\n",
-    "```python\n",
-    "import streamlit as st\n",
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "\n",
-    "df = pd.read_csv(\"state_data.csv\")\n",
-    "\n",
-    "# Let user select which state to graph\n",
-    "state = st.selectbox(\"State:\", df[\"State\"].unique())\n",
-    "\n",
-    "# Create a graph of total population\n",
-    "df_state = df[df[\"State\"] == state]\n",
-    "fig = px.line(\n",
-    "    df_state, x=\"Year\", y=\"Total Population\", title=f\"Total Population of {state}\"\n",
-    ")\n",
-    "st.plotly_chart(fig)\n",
-    "```"
+    "Streamlit makes it easy to create apps like this. For an example of an app that does something similar, view the [Covid Demographics Explorer](https://census-explorer.streamlit.app/)."
    ]
   }
  ],
@@ -1795,7 +1928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
