--- a/session2/input.ipynb
+++ b/session2/input.ipynb
@@ -280,38 +280,159 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2563661a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(39557045)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['Total Population'].max()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "18f772e9",
    "metadata": {},
    "source": [
     "# Filtering a Dataframe\n",
     "\n",
-    "The most common operation we perform on a dataframe is: \"Show me the rows where <condition> is true\". \n",
+    "The most common operation we perform on a dataframe is: \"Show me the rows where <condition> is True\". \n",
     "\n",
-    "An example is \"Show me the rows where the value of the `State` column is `Alabama`\". \n",
+    "An example is \"Show me the rows where the value of the `State` column is `Wyoming`\". \n",
     "\n",
     "The syntax for doing this with Pandas is tricky. This workbook walks you though it, in the hopes that it makes the syntax easier to remember."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c45ec5b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total Population</th>\n",
+       "      <th>Median Household Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>4442558</td>\n",
+       "      <td>36879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>4599030</td>\n",
+       "      <td>38783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>4627851</td>\n",
+       "      <td>40554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4661900</td>\n",
+       "      <td>42666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4708708</td>\n",
+       "      <td>40489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>931</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>577737</td>\n",
+       "      <td>61584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>932</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>578759</td>\n",
+       "      <td>65003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>933</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>578803</td>\n",
+       "      <td>65204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>934</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>581381</td>\n",
+       "      <td>70042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>935</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>584057</td>\n",
+       "      <td>72415</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>936 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       State  Year  Total Population  Median Household Income\n",
+       "0    Alabama  2005           4442558                    36879\n",
+       "1    Alabama  2006           4599030                    38783\n",
+       "2    Alabama  2007           4627851                    40554\n",
+       "3    Alabama  2008           4661900                    42666\n",
+       "4    Alabama  2009           4708708                    40489\n",
+       "..       ...   ...               ...                      ...\n",
+       "931  Wyoming  2018            577737                    61584\n",
+       "932  Wyoming  2019            578759                    65003\n",
+       "933  Wyoming  2021            578803                    65204\n",
+       "934  Wyoming  2022            581381                    70042\n",
+       "935  Wyoming  2023            584057                    72415\n",
+       "\n",
+       "[936 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -329,24 +450,24 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d8dd8641",
+   "id": "d9fe0854",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       True\n",
-       "1       True\n",
-       "2       True\n",
-       "3       True\n",
-       "4       True\n",
-       "       ...  \n",
-       "931    False\n",
-       "932    False\n",
-       "933    False\n",
-       "934    False\n",
-       "935    False\n",
-       "Name: State, Length: 936, dtype: bool"
+       "0      Alabama\n",
+       "1      Alabama\n",
+       "2      Alabama\n",
+       "3      Alabama\n",
+       "4      Alabama\n",
+       "        ...   \n",
+       "931    Wyoming\n",
+       "932    Wyoming\n",
+       "933    Wyoming\n",
+       "934    Wyoming\n",
+       "935    Wyoming\n",
+       "Name: State, Length: 936, dtype: object"
       ]
      },
      "execution_count": 10,
@@ -355,7 +476,203 @@
     }
    ],
    "source": [
-    "df['State'] == 'Alabama'"
+    "df['State']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d8dd8641",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total Population</th>\n",
+       "      <th>Median Household Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>495226</td>\n",
+       "      <td>46202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>515004</td>\n",
+       "      <td>47423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>920</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>522830</td>\n",
+       "      <td>51731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>921</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>532668</td>\n",
+       "      <td>53207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>922</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>544270</td>\n",
+       "      <td>52664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>564460</td>\n",
+       "      <td>53512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>924</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>568158</td>\n",
+       "      <td>56322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>925</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>576412</td>\n",
+       "      <td>54901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>926</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>582658</td>\n",
+       "      <td>58752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>927</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>584153</td>\n",
+       "      <td>57055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>928</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>586107</td>\n",
+       "      <td>60214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>929</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>585501</td>\n",
+       "      <td>59882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>930</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>579315</td>\n",
+       "      <td>60434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>931</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>577737</td>\n",
+       "      <td>61584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>932</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>578759</td>\n",
+       "      <td>65003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>933</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>578803</td>\n",
+       "      <td>65204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>934</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>581381</td>\n",
+       "      <td>70042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>935</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>584057</td>\n",
+       "      <td>72415</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       State  Year  Total Population  Median Household Income\n",
+       "918  Wyoming  2005            495226                    46202\n",
+       "919  Wyoming  2006            515004                    47423\n",
+       "920  Wyoming  2007            522830                    51731\n",
+       "921  Wyoming  2008            532668                    53207\n",
+       "922  Wyoming  2009            544270                    52664\n",
+       "923  Wyoming  2010            564460                    53512\n",
+       "924  Wyoming  2011            568158                    56322\n",
+       "925  Wyoming  2012            576412                    54901\n",
+       "926  Wyoming  2013            582658                    58752\n",
+       "927  Wyoming  2014            584153                    57055\n",
+       "928  Wyoming  2015            586107                    60214\n",
+       "929  Wyoming  2016            585501                    59882\n",
+       "930  Wyoming  2017            579315                    60434\n",
+       "931  Wyoming  2018            577737                    61584\n",
+       "932  Wyoming  2019            578759                    65003\n",
+       "933  Wyoming  2021            578803                    65204\n",
+       "934  Wyoming  2022            581381                    70042\n",
+       "935  Wyoming  2023            584057                    72415"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "condition = df['State'] == 'Wyoming'\n",
+    "df[condition]"
    ]
   },
   {
@@ -378,8 +695,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "19148ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "931     True\n",
+       "932     True\n",
+       "933     True\n",
+       "934     True\n",
+       "935     True\n",
+       "Name: State, Length: 936, dtype: bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = df['State'] == 'Wyoming'\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad4a65ef",
    "metadata": {},
    "outputs": [
     {
@@ -562,14 +912,14 @@
        "17  Alabama  2023           5108468                    62212"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "condition = df['State'] == 'Alabama'\n",
-    "df[condition]"
+    "mask = df['State'] == 'Wyoming'\n",
+    "df[mask]"
    ]
   },
   {
