--- a/session2/input.ipynb
+++ b/session2/input.ipynb
@@ -170,7 +170,7 @@
    "id": "ad622a88",
    "metadata": {},
    "source": [
-    "It is common to think of a DataFrame as \"a rectangle of data.\" A more accurate description is \"A collection of columns, each of the same length.\" \n",
+    "It is common to think of a DataFrame as \"a rectangle of data.\" A more accurate description is \"A collection of columns, each of the same length.\" Note that each column has a name.\n",
     "\n",
     "Working with a single column of data is very common. You do it like this: `df[<column name>]`.\n",
     "\n",
