--- a/session2/input.ipynb
+++ b/session2/input.ipynb
@@ -160,7 +160,7 @@
     "import pandas as pd\n",
     "from IPython.display import display\n",
     "\n",
-    "df = pd.read_csv('state_data.csv')\n",
+    "df = pd.read_csv(\"state_data.csv\")\n",
     "display(df)\n",
     "display(type(df))"
    ]
@@ -214,8 +214,8 @@
     }
    ],
    "source": [
-    "display(df['State'])\n",
-    "display(type(df['State']))"
+    "display(df[\"State\"])\n",
+    "display(type(df[\"State\"]))"
    ]
   },
   {
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "df['State'].unique()"
+    "df[\"State\"].unique()"
    ]
   },
   {
@@ -484,7 +484,7 @@
     }
    ],
    "source": [
-    "df['Total Population'] < 1000000"
+    "df[\"Total Population\"] < 1000000"
    ]
   },
   {
@@ -537,10 +537,10 @@
    ],
    "source": [
     "# Display the column / series\n",
-    "display(df['Total Population'])\n",
+    "display(df[\"Total Population\"])\n",
     "\n",
     "# The test is \"vectorized\" over the Series\n",
-    "df['Total Population'] < 1000000 "
+    "df[\"Total Population\"] < 1000000"
    ]
   },
   {
@@ -702,7 +702,7 @@
     }
    ],
    "source": [
-    "df[df['Total Population'] < 1000000]"
+    "df[df[\"Total Population\"] < 1000000]"
    ]
   },
   {
@@ -864,7 +864,7 @@
     }
    ],
    "source": [
-    "mask = df['Total Population'] <= 1000000\n",
+    "mask = df[\"Total Population\"] <= 1000000\n",
     "df[mask]"
    ]
   },
