Finish draft of inputs & graphs section

--- a/session2/graphs.ipynb
+++ b/session2/graphs.ipynb
@@ -1130,8 +1130,47 @@
     "st.plotly_chart(fig)\n",
     "```\n",
     "\n",
-    "That is, it's common to store the result of `px.line` in a variable called `fig`. And then pass `fig` to `st.plotly_chart()`.\n",
+    "That is, it's common to store the result of `px.line` in a variable called `fig`. And then pass `fig` to `st.plotly_chart()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321d13bd",
+   "metadata": {},
+   "source": [
+    "# f-Strings\n",
     "\n",
+    "For the next exercise, it will help to know about \"f-strings\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a5b43929",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Graph for New York'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state = \"New York\"\n",
+    "title = f\"Graph for {state}\"\n",
+    "title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f930b7eb",
+   "metadata": {},
+   "source": [
     "# Exercise: Plotly Graphs in Streamlit\n",
     "\n",
     "Update `graph_app.py` to create a line graph of the population of the selected State."
@@ -1170,22 +1209,60 @@
    "outputs": [],
    "source": [
     "state_abbrev = {\n",
-    "    'Alabama': 'AL', 'Alaska': 'AK', 'Arizona': 'AZ', 'Arkansas': 'AR',\n",
-    "    'California': 'CA', 'Colorado': 'CO', 'Connecticut': 'CT', 'Delaware': 'DE',\n",
-    "    'Florida': 'FL', 'Georgia': 'GA', 'Hawaii': 'HI', 'Idaho': 'ID',\n",
-    "    'Illinois': 'IL', 'Indiana': 'IN', 'Iowa': 'IA', 'Kansas': 'KS',\n",
-    "    'Kentucky': 'KY', 'Louisiana': 'LA', 'Maine': 'ME', 'Maryland': 'MD',\n",
-    "    'Massachusetts': 'MA', 'Michigan': 'MI', 'Minnesota': 'MN', 'Mississippi': 'MS',\n",
-    "    'Missouri': 'MO', 'Montana': 'MT', 'Nebraska': 'NE', 'Nevada': 'NV',\n",
-    "    'New Hampshire': 'NH', 'New Jersey': 'NJ', 'New Mexico': 'NM', 'New York': 'NY',\n",
-    "    'North Carolina': 'NC', 'North Dakota': 'ND', 'Ohio': 'OH', 'Oklahoma': 'OK',\n",
-    "    'Oregon': 'OR', 'Pennsylvania': 'PA', 'Rhode Island': 'RI', 'South Carolina': 'SC',\n",
-    "    'South Dakota': 'SD', 'Tennessee': 'TN', 'Texas': 'TX', 'Utah': 'UT',\n",
-    "    'Vermont': 'VT', 'Virginia': 'VA', 'Washington': 'WA', 'West Virginia': 'WV',\n",
-    "    'Wisconsin': 'WI', 'Wyoming': 'WY', 'Puerto Rico': 'PR'\n",
+    "    \"Alabama\": \"AL\",\n",
+    "    \"Alaska\": \"AK\",\n",
+    "    \"Arizona\": \"AZ\",\n",
+    "    \"Arkansas\": \"AR\",\n",
+    "    \"California\": \"CA\",\n",
+    "    \"Colorado\": \"CO\",\n",
+    "    \"Connecticut\": \"CT\",\n",
+    "    \"Delaware\": \"DE\",\n",
+    "    \"Florida\": \"FL\",\n",
+    "    \"Georgia\": \"GA\",\n",
+    "    \"Hawaii\": \"HI\",\n",
+    "    \"Idaho\": \"ID\",\n",
+    "    \"Illinois\": \"IL\",\n",
+    "    \"Indiana\": \"IN\",\n",
+    "    \"Iowa\": \"IA\",\n",
+    "    \"Kansas\": \"KS\",\n",
+    "    \"Kentucky\": \"KY\",\n",
+    "    \"Louisiana\": \"LA\",\n",
+    "    \"Maine\": \"ME\",\n",
+    "    \"Maryland\": \"MD\",\n",
+    "    \"Massachusetts\": \"MA\",\n",
+    "    \"Michigan\": \"MI\",\n",
+    "    \"Minnesota\": \"MN\",\n",
+    "    \"Mississippi\": \"MS\",\n",
+    "    \"Missouri\": \"MO\",\n",
+    "    \"Montana\": \"MT\",\n",
+    "    \"Nebraska\": \"NE\",\n",
+    "    \"Nevada\": \"NV\",\n",
+    "    \"New Hampshire\": \"NH\",\n",
+    "    \"New Jersey\": \"NJ\",\n",
+    "    \"New Mexico\": \"NM\",\n",
+    "    \"New York\": \"NY\",\n",
+    "    \"North Carolina\": \"NC\",\n",
+    "    \"North Dakota\": \"ND\",\n",
+    "    \"Ohio\": \"OH\",\n",
+    "    \"Oklahoma\": \"OK\",\n",
+    "    \"Oregon\": \"OR\",\n",
+    "    \"Pennsylvania\": \"PA\",\n",
+    "    \"Rhode Island\": \"RI\",\n",
+    "    \"South Carolina\": \"SC\",\n",
+    "    \"South Dakota\": \"SD\",\n",
+    "    \"Tennessee\": \"TN\",\n",
+    "    \"Texas\": \"TX\",\n",
+    "    \"Utah\": \"UT\",\n",
+    "    \"Vermont\": \"VT\",\n",
+    "    \"Virginia\": \"VA\",\n",
+    "    \"Washington\": \"WA\",\n",
+    "    \"West Virginia\": \"WV\",\n",
+    "    \"Wisconsin\": \"WI\",\n",
+    "    \"Wyoming\": \"WY\",\n",
+    "    \"Puerto Rico\": \"PR\",\n",
     "}\n",
     "\n",
-    "df['State Abbrev'] = df['State'].map(state_abbrev)"
+    "df[\"State Abbrev\"] = df[\"State\"].map(state_abbrev)"
    ]
   },
   {
@@ -1759,7 +1836,7 @@
     }
    ],
    "source": [
-    "df_2021 = df[df['Year'] == 2021]\n",
+    "df_2021 = df[df[\"Year\"] == 2021]\n",
     "df_2021"
    ]
   },
@@ -2707,13 +2784,13 @@
    "source": [
     "px.choropleth(\n",
     "    df_2021,\n",
-    "    locations='State Abbrev',\n",
-    "    locationmode='USA-states',\n",
-    "    color='Median Household Income',\n",
-    "    scope='usa',\n",
-    "#    color_continuous_scale='Viridis',\n",
-    "#    labels={'Total Population': 'Population'},\n",
-    "    title='Total Population by U.S. State'\n",
+    "    locations=\"State Abbrev\",\n",
+    "    locationmode=\"USA-states\",\n",
+    "    color=\"Median Household Income\",\n",
+    "    scope=\"usa\",\n",
+    "    #    color_continuous_scale='Viridis',\n",
+    "    #    labels={'Total Population': 'Population'},\n",
+    "    title=\"Total Population by U.S. State\",\n",
     ")"
    ]
   }
