Update notebooks and slides.

--- a/session2/input.ipynb
+++ b/session2/input.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "c7e7f909",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "9c1fb386",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "3834eaff",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "       'West Virginia', 'Wisconsin', 'Wyoming'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "98230da2",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "c45ec5b8",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "[936 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,44 +452,12 @@
     "0 < 1000000\n",
     "```\n",
     "\n",
-    "In Pandas, we use the same syntax to test whether each value in a Series is less than 1 million:"
+    "In Pandas, we use the same syntax to test whether each value in a Series is less than 1 million. This is called *vectorization*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3c27ff2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      False\n",
-       "1      False\n",
-       "2      False\n",
-       "3      False\n",
-       "4      False\n",
-       "       ...  \n",
-       "931     True\n",
-       "932     True\n",
-       "933     True\n",
-       "934     True\n",
-       "935     True\n",
-       "Name: Total Population, Length: 936, dtype: bool"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"Total Population\"] < 1000000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "d9fe0854",
    "metadata": {},
    "outputs": [
@@ -530,7 +498,7 @@
        "Name: Total Population, Length: 936, dtype: bool"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +516,7 @@
    "id": "49c2a27e",
    "metadata": {},
    "source": [
-    "We say that the logical test (`< 1000000`) is *vectorized* over the Series. Note that the comparison returns a boolean Series the same length as the original DataFrame."
+    "Note that the comparison returns a boolean Series the same length as the original DataFrame."
    ]
   },
   {
@@ -565,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "19148ecd",
    "metadata": {},
    "outputs": [
@@ -696,7 +664,7 @@
        "[130 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,15 +687,15 @@
     "```\n",
     "\n",
     "The reason it's confusing is because the bracket operator `[]` is being used twice on one line. And it means something different each time it's used: \n",
-    "  * The inner bracket is being used to extract a column as a Series\n",
-    "  * The outer bracket is being used as Boolean Indexing for the dataframe.\n",
+    "  * The inner bracket takes a column name and returns a Series\n",
+    "  * The outer bracket takes a Boolean Series and returns a dataframe.\n",
     "\n",
     "To make things easier to read, the above code is sometimes broken into two lines:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "ad4a65ef",
    "metadata": {},
    "outputs": [
@@ -858,7 +826,7 @@
        "[130 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
