--- a/3-organization/layout.ipynb
+++ b/3-organization/layout.ipynb
@@ -69,7 +69,7 @@
     "with col2:\n",
     "    st.write(\"...and I'm in col2!\")\n",
     "\n",
-    "st.write(\"Back to normal\")\n"
+    "st.write(\"Back to normal\")"
    ]
   },
   {
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "graph_tab, table_tab = st.tabs(['graph', 'table'])"
+    "graph_tab, table_tab = st.tabs([\"graph\", \"table\"])"
    ]
   },
   {
